// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "backend",
        "app.kubernetes.io/name": "plone-backend-deployment",
      },
      "name": "app-plone-backend-deployment-c85baacf",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone-backend-c82290e6",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone-backend-c82290e6",
            "app.kubernetes.io/component": "backend",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/name": "plone-backend",
            "app.kubernetes.io/part-of": "plone",
            "app.kubernetes.io/version": "undefined",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "image": "plone/plone-backend:latest",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {},
              "name": "backend-container",
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/",
                  "port": 8080,
                },
                "initialDelaySeconds": 10,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 15,
              },
              "resources": {
                "limits": {
                  "cpu": "500m",
                  "memory": "512Mi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "256Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone-backend-pdb-c8f00fdc",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone-backend-c82290e6",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "service",
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/name": "plone-backend-service",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone-backend-service-c8efef4c",
    },
    "spec": {
      "ports": [
        {
          "name": "backend-http",
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "app-plone-backend-c82290e6",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "frontend",
        "app.kubernetes.io/name": "plone-frontend-deployment",
      },
      "name": "app-plone-frontend-deployment-c872e367",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone-frontend-c8d010d1",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone-frontend-c8d010d1",
            "app.kubernetes.io/component": "frontend",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/name": "plone-frontend",
            "app.kubernetes.io/part-of": "plone",
            "app.kubernetes.io/version": "undefined",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "RAZZLE_INTERNAL_API_PATH",
                  "value": "http://app-plone-backend-service-c8efef4c:8080/Plone",
                },
              ],
              "envFrom": [],
              "image": "plone/plone-frontend:latest",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {},
              "name": "frontend-container",
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/",
                  "port": 3000,
                },
                "initialDelaySeconds": 10,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 15,
              },
              "resources": {
                "limits": {
                  "cpu": "500m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "256Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone-frontend-pdb-c82dd14e",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone-frontend-c8d010d1",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "service",
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/name": "plone-frontend-service",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone-frontend-service-c8f392cd",
    },
    "spec": {
      "ports": [
        {
          "name": "backend-http",
          "port": 3000,
          "targetPort": 3000,
        },
      ],
      "selector": {
        "app": "app-plone-frontend-c8d010d1",
      },
    },
  },
]
`;

exports[`defaults-classicui 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "backend",
        "app.kubernetes.io/name": "plone-backend-deployment",
      },
      "name": "app-plone-backend-deployment-c85baacf",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone-backend-c82290e6",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone-backend-c82290e6",
            "app.kubernetes.io/component": "backend",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/name": "plone-backend",
            "app.kubernetes.io/part-of": "plone",
            "app.kubernetes.io/version": "undefined",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "image": "plone/plone-backend:latest",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {},
              "name": "backend-container",
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/",
                  "port": 8080,
                },
                "initialDelaySeconds": 10,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 15,
              },
              "resources": {
                "limits": {
                  "cpu": "500m",
                  "memory": "512Mi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "256Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone-backend-pdb-c8f00fdc",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone-backend-c82290e6",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "service",
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/name": "plone-backend-service",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone-backend-service-c8efef4c",
    },
    "spec": {
      "ports": [
        {
          "name": "backend-http",
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "app-plone-backend-c82290e6",
      },
    },
  },
]
`;

exports[`defaults-with-pdps 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "backend",
        "app.kubernetes.io/name": "plone-backend-deployment",
      },
      "name": "app-plone_with_pdbs-backend-deployment-c8d5991a",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-backend-c885cd24",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone_with_pdbs-backend-c885cd24",
            "app.kubernetes.io/component": "backend",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/name": "plone-backend",
            "app.kubernetes.io/part-of": "plone",
            "app.kubernetes.io/version": "undefined",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "image": "plone/plone-backend:latest",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {},
              "name": "backend-container",
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/",
                  "port": 8080,
                },
                "initialDelaySeconds": 10,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 15,
              },
              "resources": {
                "limits": {
                  "cpu": "500m",
                  "memory": "512Mi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "256Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone_with_pdbs-backend-pdb-c810ca80",
    },
    "spec": {
      "maxUnavailable": 1,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-backend-c885cd24",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "service",
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/name": "plone-backend-service",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone_with_pdbs-backend-service-c819541f",
    },
    "spec": {
      "ports": [
        {
          "name": "backend-http",
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "app-plone_with_pdbs-backend-c885cd24",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "frontend",
        "app.kubernetes.io/name": "plone-frontend-deployment",
      },
      "name": "app-plone_with_pdbs-frontend-deployment-c812b31a",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-frontend-c850bc83",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "app-plone_with_pdbs-frontend-c850bc83",
            "app.kubernetes.io/component": "frontend",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/name": "plone-frontend",
            "app.kubernetes.io/part-of": "plone",
            "app.kubernetes.io/version": "undefined",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "RAZZLE_INTERNAL_API_PATH",
                  "value": "http://app-plone_with_pdbs-backend-service-c819541f:8080/Plone",
                },
              ],
              "envFrom": [],
              "image": "plone/plone-frontend:latest",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {},
              "name": "frontend-container",
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/",
                  "port": 3000,
                },
                "initialDelaySeconds": 10,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 15,
              },
              "resources": {
                "limits": {
                  "cpu": "500m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "256Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone_with_pdbs-frontend-pdb-c8ebc6c1",
    },
    "spec": {
      "minAvailable": 2,
      "selector": {
        "matchLabels": {
          "app": "app-plone_with_pdbs-frontend-c850bc83",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "service",
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/name": "plone-frontend-service",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "app-plone_with_pdbs-frontend-service-c8999de8",
    },
    "spec": {
      "ports": [
        {
          "name": "backend-http",
          "port": 3000,
          "targetPort": 3000,
        },
      ],
      "selector": {
        "app": "app-plone_with_pdbs-frontend-c850bc83",
      },
    },
  },
]
`;
